--- a/src/scss/partials/_utilities.scss
+++ b/src/scss/partials/_utilities.scss
@@ -13,3 +13,35 @@
   background-color: rgba(0, 128, 0, 0.57);
   border: 1px solid black;
 }
+
+.d-flex{
+  display: flex;
+}
+
+.j-cont-aro{
+  justify-content: space-around;
+}
+
+.j-cont-bet{
+  justify-content: space-between;
+}
+
+.j-cont-cent{
+  justify-content: center;
+}
+
+.al-item-cent{
+  align-items: center;
+}
+
+.j-cont-start{
+  justify-content: flex-start;
+}
+
+.j-cont-end{
+  justify-content: flex-end;
+}
+
+.flex-dir-col{
+  flex-direction: column;
+}
